# Teleopit

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: deploy-docs.yml  repo-hygiene.yml
.hydra/: config.yaml  hydra.yaml  overrides.yaml
docs/: architecture.md  assets.md  configuration.md  dataset.md  docusaurus.config.ts  g1_bridge_sdk.md  getting-started.md  inference.md  package-lock.json  package.json  pico4.md  sidebars.ts  sim2real.md  training.md  training_troubleshooting.md  troubleshooting.md
docs/docs/: contributing.md  intro.md
scripts/: bench_dds.py  bench_inference.py  check_large_tracked_files.py  compare_rollout_traces.py  compute_ik_offsets.py  convert_bvh_to_retarget_pkl.py  debug_inference.py  download_assets.py  ingest_motion.py  prepare_modelscope_assets.py  render_all_lafan1.sh  render_motion_npz.py  render_pkl_sim2sim.py  render_sim.py  render_val_examples.sh  run_onboard_sim2real.py  run_online_sim.py  run_pico4_sim.py  run_pico4_sim2real.py  run_sim.py  run_sim2real.py  send_bvh_udp.py  setup_onboard.sh  setup_pico4.sh  standalone_standing.py  test_policy_determinism.py  zmq_pico4_publisher.py
scripts/data/: build_dataset.py  build_dataset_from_review.py  build_dataset_v2.py  build_twist2_full.sh  check_motion_npz_fk.py  export_reviewed_manifest.py  init_review_manifest.py  migrate_legacy_dataset.py  review_dataset.py  validate_dataset.py
scripts/dev/: bench_dds.py  bench_policy_onnx.py  check_large_tracked_files.py  compute_ik_offsets.py  test_bridge_state.py  test_linkerhand_l6.py  zmq_pico4_publisher.py
scripts/render/: render_motion_npz.py  render_sim.py
scripts/review/: build_dataset_from_review.py  export_reviewed_manifest.py  init_review_manifest.py  review_dataset.py
scripts/run/: check_pico_signal.py  record_pico_motion.py  run_onboard_sim2real.py  run_online_sim.py  run_sim.py  run_sim2real.py  standalone_standing.py
scripts/setup/: download_assets.py  download_somehand_l6_assets.sh  prepare_modelscope_assets.py  setup_g1_bridge.sh  setup_onboard.sh  setup_pico4.sh  upload_hf_assets.py
scripts/view/: view_dataset.py
teleopit/: constants.py  interfaces.py  math_utils.py  pipeline.py
teleopit/bus/: __init__.py  in_process.py  topics.py
teleopit/configs/: default.yaml  motion_tracking.yaml  motion_tracking_online.yaml  motion_tracking_pico4_sim.yaml  motion_tracking_pico4_sim2real.yaml  motion_tracking_sim2real.yaml  onboard_sim2real.yaml  online.yaml  pico4_record.yaml  pico4_sim.yaml  pico4_sim2real.yaml  sim2real.yaml  sim2real_record.yaml
teleopit/controllers/: observation.py  qpos_interpolator.py  reference_processing.py  rl_policy.py
teleopit/debug/: rollout_trace.py
teleopit/inputs/: __init__.py  bvh_provider.py  human_frame_validation.py  pico4_provider.py  pico_video.py  realtime_frame_cache.py  realtime_packet.py  rot_utils.py  udp_bvh_provider.py  vr_stub.py  (+1 more)
teleopit_train/: __init__.py
tests/: conftest.py  test_adaptive_sampling.py  test_bus.py  test_cli_entrypoints.py  test_console.py  test_controller.py  test_dataset_v2.py  test_dataset_viewer.py  test_dexterous_hand.py  test_domain_randomization.py  test_download_assets.py  test_e2e.py  test_hc_mocap.py  test_human_frame_validation.py  test_interfaces.py  test_math_utils.py  test_mocap_mujoco.py  test_motion_fk.py  test_motion_sampling.py  test_observation.py  test_pico4_provider.py  test_pico_motion_recording.py  test_pico_video.py  test_pipeline.py  test_realtime_utils.py  test_recording.py  test_reference_motion.py  test_reference_timeline.py  test_render_sim.py  test_retargeting.py  test_review_pipeline.py  test_robot.py  test_runner_export.py  test_runner_iteration_numbering.py  test_runtime_components.py  test_save_onnx.py  test_sim2real_dim.py  test_sim2real_multiprocess.py  test_sim2real_runtime.py  test_sim_loop.py  (+6 more)
train_mimic/: __init__.py  app.py
(+232 files in other folders)
