[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleopit"
version = "0.1.0"
description = "Teleoperation framework for humanoid robots with motion retargeting"
authors = [
    {name = "Teleopit Team"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mujoco",
    "mink",
    "qpsolvers[proxqp]",
    "torch",
    "scipy",
    "numpy",
    "hydra-core",
    "omegaconf",
    "h5py",
    "onnxruntime",
    "rich",
    "loop-rate-limiters",
    "imageio",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
sim2real = [
    "cyclonedds==0.10.2",
    "opencv-python",
    # Also requires unitree_sdk2_python submodule:
    #   pip install -e third_party/unitree_sdk2_python
]
train = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "rsl-rl-lib",
    "mjlab>=1.2.0",
    "wandb>=0.15.0",
    "tqdm>=4.65.0",
]
pico4 = [
    # xrobotoolkit_sdk is a proprietary Pico4 SDK — install manually from vendor package
    "teleopit[sim2real]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["teleopit*", "train_mimic*"]
