[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleopit"
version = "0.2.0"
description = "Teleoperation framework for humanoid robots with motion retargeting"
authors = [
    {name = "Teleopit Team"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mujoco",
    "mink",
    "qpsolvers[proxqp]",
    "torch",
    "scipy",
    "numpy",
    "hydra-core",
    "omegaconf",
    "h5py",
    "onnxruntime",
    "rich",
    "loop-rate-limiters",
    "imageio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
sim2real = [
    "opencv-python",
    # Also requires g1_bridge_sdk (C++ DDS bridge):
    #   pip install third_party/g1_bridge_sdk
]
train = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "rsl-rl-lib",
    "mjlab>=1.2.0",
    "wandb>=0.15.0",
    "tqdm>=4.65.0",
]
pico4 = [
    # xrobotoolkit_sdk is a proprietary Pico4 SDK — install manually from vendor package
    "pyzmq>=25.0",
    "msgpack>=1.0",
    "teleopit[sim2real]",
]
onboard = [
    "pyzmq>=25.0",
    "msgpack>=1.0",
    "teleopit[sim2real]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["teleopit*", "train_mimic*"]
