[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleopit"
version = "0.3.0"
description = "Teleoperation framework for humanoid robots with motion retargeting"
authors = [
    {name = "Teleopit Team"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mujoco",
    "mink",
    "qpsolvers[proxqp]",
    "torch",
    "scipy",
    "numpy",
    "hydra-core",
    "omegaconf",
    "h5py",
    "onnxruntime",
    "pyzmq",
    "rich",
    "loop-rate-limiters",
    "imageio",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
sim2real = [
    "opencv-python",
    # Also requires g1_bridge_sdk (C++ DDS bridge):
    #   bash scripts/setup/setup_g1_bridge.sh
]
train = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "rsl-rl-lib",
    "mjlab>=1.2.0",
    "wandb>=0.15.0",
    "swanlab",
    "tqdm>=4.65.0",
]
pico4 = [
    "pico-bridge[camera] @ https://github.com/BotRunner64/pico-bridge/releases/download/v0.2.1/pico_bridge-0.2.1-py3-none-any.whl",
    "teleopit[sim2real]",
]
dexhand = [
    "linkerhand-python-sdk @ file:third_party/linkerhand-python-sdk",
    "somehand @ file:third_party/somehand",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["teleopit*", "train_mimic*"]
